[package]
name = "ckb-pcn-cross-chain-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
miniscript = { version = "11.0.0" }
bitcoind = { version = "0.34.1", features = ["22_1"] }
secp256k1 = { version = "0.28.2", features = ["rand-std"] }
